# dotfiles_supercharged

./: .gitignore  README.md  environment.yml  main.yml  pyproject.toml  renovate.json  requirements.txt  rootful.yml  rootless.yml
.devcontainer/: Dockerfile  devcontainer.json
group_vars/: all.yml.example
host_vars/: localhost.yml.example
roles/: requirements.yml
roles/base/handlers/: main.yml
roles/base/tasks/: de.yml  gpg.yml  main.yml  ssh.yml  sudo.yml  system.yml  user.yml
roles/config/files/: zshrc
roles/config/tasks/: main.yml
roles/desktop_environment/defaults/: main.yml
roles/desktop_environment/files/: logid.cfg  touchegg.xml
roles/desktop_environment/handlers/: main.yml
roles/desktop_environment/tasks/: easyeffects.yml  konsole.yml  kwallet.yml  libinput-gestures.yml  logiops.yml  main.yml  touchegg.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: main.yml
roles/machine/defaults/: main.yml
roles/machine/handlers/: main.yml
roles/machine/tasks/: laptop.yml  main.yml  xps159500.yml
roles/plasma/defaults/: main.yml
roles/plasma/handlers/: main.yml
roles/plasma/tasks/: konsole.yml  kwallet.yml  libinput-gestures.yml  logiops.yml  main.yml  plasma.yml
roles/software/defaults/: main.yml
roles/software/handlers/: main.yml
roles/software/tasks/: chrome.yml  docker.yml  jetbrains.yml  main.yml  software.yml  virtualization.yml  vscode.yml
roles/system/defaults/: main.yml
roles/system/tasks/: main.yml
roles/system/vars/: main.yml.example
roles/user/defaults/: main.yml
roles/user/files/: .gitconfig  p10k.zsh  (+1 more)
(+28 files in other folders)
