[tool.poetry]
name = "dotfiles_supercharged"
version = "0.1.0"
description = ""
authors = ["Tommaso Bailetti <bailetti.tommaso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.15.1"

[tool.poetry.dev-dependencies]
ansible-lint = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
